# dvid

./: .codespellrc  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile-legacyConsole  GUIDE.md  INSTALL.md  LICENSE.txt  Makefile  README-precomputed.md  README.md  app.yaml  circle.yml  config-full.toml  config-simple.toml  config.example.toml  doc.go  dvid.go  go.mod  go.sum
cache/: lru_cache.go
cli/: cli.go  doc.go  main.go
command/: command.go  doc.go
conda-recipe/: build.sh  go-get-dependencies.sh  meta.yaml
conf/: config.example
datastore/: badger.go  basholeveldb.go  bigtable.go  cache.go  config.go  config_test.go  copy_local.go  datainstance.go  datainstance_test.go  dataset.go  dataset_test.go  datastore.go  datastore_test.go  datatype.go  distributed.go  distributed_local.go  doc.go  filestore.go  gbucket.go  indexing.go  key.go  keys.go  keyvalue.go  kvautobus.go  mapper.go  monitor.go  ngprecomputed.go  public.go  public_test.go  pubsub.go  push_local.go  repo.go  repo_cluster.go  repo_gcloud.go  repo_local.go  repo_local_test.go  swift.go  test_support.go  versioning.go
datatype/: datatype.go  doc.go  format.go
demo_data/: config.json
docs/: 2026-03-22-MaxLabelBugs.md  2026-03-28-FixRaceInTest.md  2026-04-11-DSGAuthIntegration.md  2026-06-03-Access-per-UUID.md  DSG-Authorization-Wiki.md  ExportShardsOptimization.md  ServerInitOptimization.md  datatype-annotation.txt  datatype-imageblk.txt  (+9 more)
testing/fvdb/: CMakeLists.txt  README.md  generate_test_grids.go  nvdb_verify.cpp  run_tests.sh
(+418 files in other folders)
